--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,10 @@
     "type": "project",
     "require": {
         "php": ">=5.5.9",
-        "laravel/framework": "5.2.*"
+        "laravel/framework": "5.2.*",
+        "stripe/stripe-php": "3.*",
+        "bican/roles": "2.1.*"
+
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
@@ -14,6 +17,7 @@
         "phpunit/phpunit": "~4.0",
         "symfony/css-selector": "2.8.*|3.0.*",
         "symfony/dom-crawler": "2.8.*|3.0.*"
+
     },
     "autoload": {
         "classmap": [
